<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <!--    <TextView-->
    <!--        android:id="@+id/text_dashboard"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Dashboard"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.498"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"-->
    <!--        app:layout_constraintVertical_bias="0.02" />-->
    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/_5sdp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/tutorial_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:breakStrategy="high_quality"
                android:text="@string/tutorial_1"
                android:textSize="@dimen/_15ssp" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/text_dashboard1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/class_1"
                            android:textSize="@dimen/_20ssp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/record_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="Record 1" />

                        <Button
                            android:id="@+id/record_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="Record 2" />

                        <Button
                            android:id="@+id/record_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="Record 3" />

                        <Button
                            android:id="@+id/record_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="Record 4" />

                        <Button
                            android:id="@+id/record_5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="Record 5" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/play_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/play" />

                        <Button
                            android:id="@+id/play_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/play" />

                        <Button
                            android:id="@+id/play_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/play" />

                        <Button
                            android:id="@+id/play_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/play" />

                        <Button
                            android:id="@+id/play_5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/play" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/text_dashboard2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/class_2"
                            android:textSize="@dimen/_20ssp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/record_6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="Record 6" />

                        <Button
                            android:id="@+id/record_7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="Record 7" />

                        <Button
                            android:id="@+id/record_8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="Record 8" />

                        <Button
                            android:id="@+id/record_9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="Record 9" />

                        <Button
                            android:id="@+id/record_10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="Record 10" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/play_6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/play" />

                        <Button
                            android:id="@+id/play_7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/play" />

                        <Button
                            android:id="@+id/play_8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/play" />

                        <Button
                            android:id="@+id/play_9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/play" />

                        <Button
                            android:id="@+id/play_10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/play" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/text_dashboard3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/class_3"
                            android:textSize="@dimen/_20ssp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/record_11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/record_11" />

                        <Button
                            android:id="@+id/record_12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/record_12" />

                        <Button
                            android:id="@+id/record_13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="Record 13" />

                        <Button
                            android:id="@+id/record_14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="Record 14" />

                        <Button
                            android:id="@+id/record_15"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="Record 15" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/play_11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/play" />

                        <Button
                            android:id="@+id/play_12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/play" />

                        <Button
                            android:id="@+id/play_13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/play" />

                        <Button
                            android:id="@+id/play_14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/play" />

                        <Button
                            android:id="@+id/play_15"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/play" />

                    </TableRow>
                </TableLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/tutorial_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:breakStrategy="high_quality"
                android:paddingTop="@dimen/_10sdp"
                android:text="@string/tutorial_2"
                android:textSize="@dimen/_15ssp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_20sdp"
                android:paddingTop="@dimen/_20sdp"
                android:paddingEnd="@dimen/_20sdp">

                <AutoCompleteTextView
                    android:id="@+id/menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/class_4"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_20sdp"
                android:paddingTop="@dimen/_20sdp"
                android:paddingEnd="@dimen/_20sdp">

                <AutoCompleteTextView
                    android:id="@+id/menu2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/class_5"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tutorial_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:breakStrategy="high_quality"
                android:paddingTop="@dimen/_10sdp"
                android:text="@string/tutorial_3"
                android:textSize="@dimen/_15ssp" />

            <Button
                android:id="@+id/record_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Record Background Noise" />

            <Button
                android:id="@+id/play_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/play" />

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="@dimen/_55sdp"
                android:text="SUBMIT TO SERVER" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>